--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,10 @@ tqdm>=4.65.0
 # Version Management
 packaging>=21.0
 
+# Data Visualization
+matplotlib>=3.5.0
+seaborn>=0.11.0
+
 # ================================
 # OPTIONAL DEPENDENCIES
 # ================================
